; ModuleID = '/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_spa_checkpoint_create_discard.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_spa_checkpoint_create_discard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ztest_spa = common dso_local global i32* null, align 8
@ztest_checkpoint_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ztest_spa_checkpoint_create_discard(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** @ztest_spa, align 8
  store i32* %6, i32** %5, align 8
  %7 = call i32 @mutex_enter(i32* @ztest_checkpoint_lock)
  %8 = call i64 @ztest_random(i32 2)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @ztest_spa_checkpoint(i32* %11)
  br label %16

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @ztest_spa_discard_checkpoint(i32* %14)
  br label %16

16:                                               ; preds = %13, %10
  %17 = call i32 @mutex_exit(i32* @ztest_checkpoint_lock)
  ret void
}

declare dso_local i32 @mutex_enter(i32*) #1

declare dso_local i64 @ztest_random(i32) #1

declare dso_local i32 @ztest_spa_checkpoint(i32*) #1

declare dso_local i32 @ztest_spa_discard_checkpoint(i32*) #1

declare dso_local i32 @mutex_exit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
